Working on the corrections.

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -28,7 +28,7 @@
 % Update article type if known
 \papertype{Research Article}
 
-\title{Analog methods and ERA5: benefits and pitfalls of high spatial resolution}
+\title{Analog methods and ERA5: benefits and pitfalls}
 
 % List abbreviations here, if any. Please note that it is preferred that abbreviations be defined at the first instance they appear in the text, rather than creating an abbreviations list.
 \abbrevs{AMs, analog methods; NWP, Numerical weather prediction; CP, calibration period; VP, validation period; AP, archive period}
@@ -57,7 +57,7 @@
 \begin{abstract}
 Perfect prognosis statistical downscaling relies on statistical relationships established between observational data for both predictands and predictors. Predictors are often retrieved from reanalyses, which are considered as pseudo-observations. The impact of the choice of a reanalysis dataset on the skill of the downscaling method is usually overlooked as global reanalyses are frequently assumed to be equivalent for the last decades and data-rich regions such as Europe. However, it was recently shown that the reanalysis dataset has an impact on the method skill that can be even higher than the choice of the predictor variables. Generally, reanalyses that are processed by more recent atmospheric models and that assimilate more data perform best.
 
-Following the release of ERA5, this work aimed at assessing the extent of the potential gains compared to other global reanalyses. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict the daily precipitation at 301 stations in Switzerland. ERA5 ended up among the best performing reanalyses and proved the best choice for 50\% of the stations on average across the different analog methods.
+Following the release of ERA5, this work aimed at assessing the extent of the potential gains compared to other global reanalyses. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict the daily precipitation at 301 stations in Switzerland. ERA5 ended up among the best performing reanalyses and proved the best choice for 50\% of the stations on average across the different analog methods. We would recommend using 20CR-2c for applications starting between 1851 and 1900, CERA-20C for those starting between 1900 and 1950, and ERA5 for applications after 1950.
 
 However, ERA5 is delivered with a high spatial resolution (0.25\degree), which turned out to be a trap for simple calibration techniques. Indeed, the domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local minima. An enhanced calibration procedure must thus be used. Besides the risk of poorly-calibrated domains, the high resolution also requires much higher computational time for no gain in skill, as long as the predictors considered are at a synoptic scale. Although ERA5 should be the dataset of choice, its use at lower resolution for the prediction of daily precipitation should provide equivalent performances.
 
@@ -73,13 +73,19 @@ However, ERA5 is delivered with a high spatial resolution (0.25\degree), which t
 
 Analog methods (AMs) are statistical downscaling techniques that aim at predicting local meteorological variables, often daily precipitation, based on large-scale predictors. AMs rely on the hypothesis that similar synoptic situations are likely to result in similar local effects, plus a certain variability that is not explained by the considered predictors \citep{Lorenz1969}. To account for this unexplained variability, an ensemble of analog situations is considered. It thus provides a statistical prediction in the form of an empirical conditional distribution made of the corresponding observed predictand values. Multiple variants of the AM exist, eventually with different structures and approaches, but mainly with different predictors.
 
+Application of AMs consist, for example, in daily precipitation predictions, either in an operational forecasting context \citep[e.g.][]{Bontron2005, Hamill2006, Bliefernicht2010, Marty2012, Horton2012, Hamill2015, BenDaoud2016} or for downscaling climate models \citep[e.g.][]{Zorita1999, Wetterhall2005, Wetterhall2007, Matulla2007, Radanovics2013, Chardon2014, Dayon2015, Raynaud2016b}. Other applications focus on precipitation radar images \citep{Panziera2011, Foresti2015a}, temperature \citep{Kruizinga1983, DelleMonache2013, Caillouet2016, Raynaud2016b}, wind \citep{DelleMonache2013, DelleMonache2011, Vanvyve2015, Alessandrini2015, Junk2015, Junk2015c}, solar radiation or power production \citep{Alessandrini2015a, Bessa2015, Raynaud2016b}, and the trajectory of tropical cyclones \citep{Sievers2000, Fraedrich2003}. AMs are also used for seasonal forecast \citep{Xavier2007, Charles2012, Wu2012, Shao2013}.
+
 AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the statistical relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for the large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. Globally, two main types of reanalysis products exist: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and hence assimilate surface data only, and those that aim for accuracy over a more recent period and therefore assimilate a maximum of observations, including multiple satellite products. The reanalyses accuracy depends on the quality of the model physics and the analysis process, thus on the quantity and quality of the assimilated observations \citep{Dee2011a}.
 
 The choice of a reanalysis dataset to be used in AMs can be driven by the context of the application. For example, if a coverage of the 20th century is needed, ECMWF twentieth century reanalyses \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the Twentieth Century Reanalysis \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In an operational forecasting context, with the target situation being provided by an NWP model, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce the inter-models biases. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider.  
 
-NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many applications of AMs \citep{Timbal2003, Bontron2004, Wetterhall2005a, Gangopadhyay2005, Altava-Ortiz2006, Barrera2007, Cannon2007, Matulla2007, Bliefernicht2007, Maurer2008, BenDaoud2009, Wu2012, Marty2012, Teng2012, Horton2012, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep {BenDaoud2009, Willems2011b, JakobThemessl2011a, BenDaoud2011, Turco2011a, Franke2011, Pascual2012b, Schenk2012, Ribalaygua2013a, Osca2013, Radanovics2013, Martin2014b, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese products, the Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, were not used in AMs to the author knowledge. Newer products, such as NCEP's the Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a}, MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, or ERA5 \citep{Hersbach2019}, are not much used yet in AMs. One can often observe a lag between the release of a new reanalysis dataset and its adoption in AMs.
+NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many applications of AMs \citep[e.g.][]{Timbal2003, Altava-Ortiz2006, Matulla2007, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep[e.g.][] {Willems2011b, Radanovics2013, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese products, the Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, were not used in AMs to the author knowledge. Newer products, such as NCEP's the Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a}, MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, or ERA5 \citep{Hersbach2019}, are not much used yet in AMs. One can often observe a lag between the release of a new reanalysis dataset and its adoption in AMs.
 
-Most applications of AMs are based on a single reanalysis dataset, and the impact of this choice is overlooked. \citet{BenDaoud2009} compared NR-1 to ERA-40 and found no significant difference for the predictors considered. Later, \citet{Dayon2015} compared NR-1, MERRA, ERA-INT, and 20CR and found out that the choice of the reanalysis dataset has a non-negligible impact on the performance of the AMs that can even be greater than the choice of the predictor variables. They concluded that the role of the reanalyses should not be underestimated. Such influence has also been observed for other statistical downscaling methods \citep[e.g.][]{Koukidis2009}. \citet{Horton2018b} compared ten global reanalyses and concluded that the impact of the dataset on the results of the AM is significant. As in the work of \citet{Dayon2015}, the impact of the reanalysis was found to be sometimes higher than that of the selected predictors. In short, more recent products that assimilate more data show better skills \citep{Horton2018b}. This work is a follow-up of the work of \citet{Horton2018b} and focuses on ERA5 by comparing its impact in seven AMs with nine other major reanalyses at 301 stations in Switzerland, with a focus on its predecessor ERA-Interim. The optimal parameters, such as the number of analogs and the size of the comparison domain, are compared among reanalysis and discussed, which provides an original insight on the role of the spatial resolution and the reanalysis quality. The benefit of ERA5 high spatial resolution and its potential pitfalls are also assessed.
+Most applications of AMs are based on a single reanalysis dataset, and the impact of this choice is overlooked. \citet{BenDaoud2009} compared NR-1 to ERA-40 and found no significant difference for the predictors considered. Later, \citet{Dayon2015} compared NR-1, MERRA, ERA-INT, and 20CR and found out that the choice of the reanalysis dataset has a non-negligible impact on the performance of the AMs that can even be greater than the choice of the predictor variables. They concluded that the role of the reanalyses should not be underestimated. Such influence has also been observed for other statistical downscaling methods \citep[e.g.][]{Koukidis2009}. \citet{Horton2018b} compared ten global reanalyses and concluded that the impact of the dataset on the results of the AM is significant. As in the work of \citet{Dayon2015}, the impact of the reanalysis was found to be sometimes higher than that of the selected predictors. 
+
+Generally, more recent products that assimilate more data, and that come at a higher spatial resolution, show better skills \citep{Horton2018b}. This is however not systematically the case, as for example JRA-55, that has a lower spatial resolution (1.25\degree), turned out to be among the best options for more complex AMs. Also, the choice of a reanalysis can be driven by the period of interest. Thus, a table has been provided by \citet{Horton2018b} to help with the selection of a reanalysis for a given predictor and a given period as there was no overall better dataset. Some characteristics of the datasets were also assessed, such as the spatial resolution, the archive length, and the use of ensemble members. For most AMs and datasets, there was a gain in skill with higher resolution up to 1\degree, below which the gains were almost null. The use of long archives for reanalyses with extended data improved the skill to some extent by providing potentially better analog situations, particularly for less frequent situations. However, former times are more data-scarce and data might be inhomogeneous over long periods, which can in turn have a negative effect on the skill of AMs exploiting these archives \citep{Horton2018b}. Finally, the use of ensemble members showed limited benefits and great caution is required for methods with multiple levels of analogy.
+
+This work is a follow-up of the work of \citet{Horton2018b} and focuses on ERA5 by comparing its impact in six AMs with nine other major reanalyses at 301 stations in Switzerland, with a focus on its predecessor ERA-Interim. The analyses of the characteristics of the reanalyses as in \citet{Horton2018b} were not repeated here as the conclusions are likely identical. The optimal parameters, such as the number of analogs and the size of the comparison domain, are compared among reanalysis and discussed, which provides an original insight on the role of the spatial resolution and the reanalysis quality. The benefit of ERA5 high spatial resolution and its potential pitfalls are also assessed.
 
 
 \section{Data and methods}
@@ -277,7 +283,7 @@ The spatial windows were shown to vary substantially among reanalyses. Spatial w
 
 \citet{Horton2018b} showed that using reanalyses at a spatial resolution inferior to  1\degree\ did not significantly improve the performance score. ERA5 was here used at its original resolution as well as with the same resolution as ERA-INT (0.75\degree). The reduction in spatial resolution did not impact the performance of AMs for daily precipitation, here mainly driven by synoptic-scale processes. This conclusion was shown to be not valid for predictands driven by mesoscale drivers, such as the lightning activity. It also implies that the output resolution does not explain the gains in skill compared to ERA-INT, which are likely due to improvements to the forecast model, the assimilation scheme, and the assimilated data.
 
-To conclude, the use of ERA5 is recommended for the prediction of daily precipitation with AMs in Europe, ideally along with other reanalyses to provide a multi-model approach. However, for predictands that are primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be counterproductive if the calibration method does not handle it well.
+To conclude, the use of ERA5 is recommended for the prediction of daily precipitation with AMs in Europe, ideally along with other reanalyses to provide a multi-model approach. ERA5 was shown to be systematically among the best options for each AM, and thus there is no need of a predictor-conditioned selection as in \citet{Horton2018b}. We would then recommend using 20CR-2c for applications starting between 1851 and 1900, CERA-20C for those starting between 1900 and 1950, and ERA5 for applications after 1950. However, for predictands that are primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be counterproductive if the calibration method does not handle it well.
 
 
 
