--- a/references.bib
+++ b/references.bib
@@ -782,4 +782,238 @@
 	volume = {37 A},
 	year = {1985}
 }
+@article{Bontron2005,
+	author = {Bontron, Guillaume and Obled, Charles},
+	doi = {10.1051/lhb:200501002},
+	journal = {La Houille Blanche},
+	pages = {23--28},
+	title = {{L'adaptation probabiliste des pr{\'{e}}visions m{\'{e}}t{\'{e}}orologiques pour la pr{\'{e}}vision hydrologique}},
+	volume = {1},
+	year = {2005}
+}
+@article{Hamill2006,
+	author = {Hamill, T and Whitaker, J},
+	doi = {10.1175/mwr3237.1},
+	journal = {Mon. Weather Rev.},
+	number = {11},
+	pages = {3209--3229},
+	title = {{Probabilistic quantitative precipitation forecasts based on reforecast analogs: Theory and application}},
+	volume = {134},
+	year = {2006}
+}
+@phdthesis{Bliefernicht2010,
+	author = {Bliefernicht, Jan},
+	school = {Universit{\"{a}}t Stuttgart},
+	title = {{Probability forecasts of daily areal precipitation for small river basins}},
+	year = {2010}
+}
+@article{Hamill2015,
+	author = {Hamill, Thomas M and Scheuerer, Michael and Bates, Gary T},
+	doi = {10.1175/MWR-D-15-0004.1},
+	journal = {Mon. Weather Rev.},
+	number = {8},
+	pages = {3300--3309},
+	title = {{Analog Probabilistic Precipitation Forecasts Using GEFS Reforecasts and Climatology-Calibrated Precipitation Analyses}},
+	volume = {143},
+	year = {2015}
+}
+@article{Zorita1999,
+	author = {Zorita, E. and von Storch, Hans},
+	doi = {10.1175/1520-0442(1999)012<2474:TAMAAS>2.0.CO;2},
+	journal = {J. Clim.},
+	number = {8},
+	pages = {2474--2489},
+	title = {{The analog method as a simple statistical downscaling technique: comparison with more complicated methods}},
+	volume = {12},
+	year = {1999}
+}
+@phdthesis{Wetterhall2005,
+	author = {Wetterhall, Fredrik},
+	school = {Uppsala University},
+	title = {{Statistical Downscaling of Precipitation from Large-scale Atmospheric Circulation: Comparison of Methods and Climate Regions}},
+	year = {2005}
+}
+@article{Wetterhall2007,
+	author = {Wetterhall, Fredrik and Halldin, S. and Xu, Chong-yu},
+	doi = {10.1007/s00704-005-0223-3},
+	issn = {0177-798X},
+	journal = {Theor. Appl. Climatol.},
+	month = {jun},
+	number = {1-4},
+	pages = {123--137},
+	title = {{Seasonality properties of four statistical-downscaling methods in central Sweden}},
+	volume = {87},
+	year = {2007}
+}
+@article{Panziera2011,
+	author = {Panziera, L. and Germann, U. and Gabella, M. and Mandapaka, P. V.},
+	doi = {10.1002/qj.878},
+	issn = {00359009},
+	journal = {Q. J. R. Meteorol. Soc.},
+	number = {661},
+	pages = {2106--2123},
+	title = {{NORA-Nowcasting of Orographic Rainfall by means of Analogues}},
+	volume = {137},
+	year = {2011}
+}
+@article{Foresti2015a,
+	author = {Foresti, Loris and Panziera, Luca and Mandapaka, Pradeep V. and Germann, Urs and Seed, Alan},
+	doi = {10.1002/met.1416},
+	isbn = {13504827 (ISSN)},
+	issn = {14698080},
+	journal = {Meteorol. Appl.},
+	number = {2},
+	pages = {141--155},
+	title = {{Retrieval of analogue radar images for ensemble nowcasting of orographic rainfall}},
+	volume = {22},
+	year = {2015}
+}
+@article{Kruizinga1983,
+	author = {Kruizinga, S and Murphy, AH},
+	doi = {10.1175/1520-0493(1983)111<2244:uoaapt>2.0.co;2},
+	journal = {Mon. Weather Rev.},
+	number = {11},
+	pages = {2244--2254},
+	title = {{Use of an analogue procedure to formulate objective probabilistic temperature forecasts in the Netherlands}},
+	volume = {111},
+	year = {1983}
+}
+@article{DelleMonache2013,
+	author = {{Delle Monache}, Luca and Eckel, F. Anthony and Rife, Daran L. and Nagarajan, Badrinath and Searight, Keith},
+	doi = {10.1175/MWR-D-12-00281.1},
+	issn = {0027-0644},
+	journal = {Mon. Weather Rev.},
+	pages = {3498--3516},
+	title = {{Probabilistic Weather Prediction with an Analog Ensemble.}},
+	volume = {141},
+	year = {2013}
+}
+@article{DelleMonache2011,
+	author = {{Delle Monache}, Luca and Nipen, Thomas and Liu, Yubao and Roux, Gregory and Stull, Roland},
+	doi = {10.1175/2011MWR3653.1},
+	isbn = {8610829952},
+	issn = {0027-0644},
+	journal = {Mon. Weather Rev.},
+	number = {11},
+	pages = {3554--3570},
+	title = {{Kalman Filter and Analog Schemes to Postprocess Numerical Weather Predictions}},
+	volume = {139},
+	year = {2011}
+}
+@article{Alessandrini2015,
+	author = {Alessandrini, Stefano and {Delle Monache}, Luca and Sperati, S. and Nissen, J. N.},
+	doi = {10.1016/j.renene.2014.11.061},
+	issn = {18790682},
+	journal = {Renew. Energy},
+	keywords = {Analog ensemble,Ensemble verification,Probabilistic predictions,Short-term wind power forecasting,Uncertainty quantification},
+	pages = {768--781},
+	publisher = {Elsevier Ltd},
+	title = {{A novel application of an analog ensemble for short-term wind power forecasting}},
+	volume = {76},
+	year = {2015}
+}
+@article{Alessandrini2015a,
+	author = {Alessandrini, Stefano and {Delle Monache}, Luca and Sperati, S. and Cervone, G.},
+	doi = {10.1016/j.apenergy.2015.08.011},
+	issn = {03062619},
+	journal = {Appl. Energy},
+	keywords = {2 read now,Analog ensemble,Ensemble verification,Probabilistic predictions,Short-term solar power forecasting,Uncertainty quantification},
+	pages = {95--110},
+	publisher = {Elsevier Ltd},
+	title = {{An analog ensemble for short-term probabilistic solar power forecast}},
+	volume = {157},
+	year = {2015}
+}
+@article{Junk2015,
+	author = {Junk, Constantin and {Delle Monache}, Luca and Alessandrini, Stefano and Cervone, Guido and von Bremen, Lueder},
+	doi = {10.1127/metz/2015/0659},
+	issn = {0941-2948},
+	journal = {Meteorol. Zeitschrift},
+	number = {4},
+	pages = {361--379},
+	title = {{Predictor-weighting strategies for probabilistic wind power forecasting with an analog ensemble}},
+	volume = {24},
+	year = {2015}
+}
+@article{Junk2015c,
+	author = {Junk, Constantin and {Delle Monache}, Luca and Alessandrini, Stefano},
+	doi = {10.1175/MWR-D-15-0095.1},
+	issn = {0027-0644},
+	journal = {Mon. Weather Rev.},
+	keywords = {2 read now},
+	number = {7},
+	pages = {2909--2917},
+	title = {{Analog-based Ensemble Model Output Statistics}},
+	volume = {143},
+	year = {2015}
+}
+@article{Bessa2015,
+	author = {Bessa, R.J. and Trindade, A. and Silva, C{\'{a}}tia S.P. and Miranda, V.},
+	doi = {10.1016/j.ijepes.2015.02.006},
+	issn = {01420615},
+	journal = {Int. J. Electr. Power Energy Syst.},
+	pages = {16--23},
+	publisher = {Elsevier Ltd},
+	title = {{Probabilistic solar power forecasting in smart grids using distributed information}},
+	volume = {72},
+	year = {2015}
+}
+@article{Sievers2000,
+	author = {Sievers, Oliver and Fraedrich, Klaus and Raible, Christoph C.},
+	doi = {10.1175/1520-0434(2000)015<0623:SAAEPO>2.0.CO;2},
+	issn = {0882-8156},
+	journal = {Weather Forecast.},
+	month = {oct},
+	number = {5},
+	pages = {623--629},
+	title = {{Self-Adapting Analog Ensemble Predictions of Tropical Cyclone Tracks}},
+	volume = {15},
+	year = {2000}
+}
+@article{Fraedrich2003,
+	author = {Fraedrich, Klaus and Raible, Christoph C. and Sielmann, Frank},
+	doi = {10.1175/1520-0434(2003)018<0003:AEFOTC>2.0.CO;2},
+	issn = {0882-8156},
+	journal = {Weather Forecast.},
+	month = {feb},
+	number = {1},
+	pages = {3--11},
+	title = {{Analog Ensemble Forecasts of Tropical Cyclone Tracks in the Australian Region}},
+	volume = {18},
+	year = {2003}
+}
+@article{Xavier2007,
+	author = {Xavier, Prince K. and Goswami, B. N.},
+	doi = {10.1175/2007MWR1854.1},
+	issn = {0027-0644},
+	journal = {Mon. Weather Rev.},
+	month = {dec},
+	number = {12},
+	pages = {4149--4160},
+	title = {{An Analog Method for Real-Time Forecasting of Summer Monsoon Subseasonal Variability}},
+	volume = {135},
+	year = {2007}
+}
+@article{Shao2013,
+	author = {Shao, Quanxi and Li, Ming},
+	doi = {10.1007/s00477-012-0610-0},
+	issn = {14363240},
+	journal = {Stoch. Environ. Res. Risk Assess.},
+	number = {4},
+	pages = {819--830},
+	title = {{An improved statistical analogue downscaling procedure for seasonal precipitation forecast}},
+	volume = {27},
+	year = {2013}
+}
+@article{Charles2012,
+	author = {Charles, Andrew and Timbal, Bertrand and Fernandez, Elodie and Hendon, Harry},
+	doi = {10.1175/mwr-d-12-00098.1},
+	issn = {0027-0644},
+	journal = {Mon. Weather Rev.},
+	number = {3},
+	pages = {1099--1117},
+	title = {{Analog Downscaling of Seasonal Rainfall Forecasts in the Murray Darling Basin}},
+	volume = {141},
+	year = {2012}
+}
 
