--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -59,7 +59,7 @@ Perfect prognosis statistical downscaling relies on the statistical relationship
 
 This work is aimed at assessing the extent of potential gains from the use of ERA5, following its release, compared to other global reanalyses. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict daily precipitation at 301 stations across Switzerland. ERA5 proved to be one of the best performing reanalyses across the different analog methods. Due to data availability, we recommend using 20CR-2c for applications starting between 1851 and 1900, CERA-20C for those between 1900 and 1950, and ERA5 for applications after 1950.
 
-However, ERA5 high spatial resolution (0.25\degree) turned out to be a trap for simple calibration techniques. The domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local solutions. An enhanced calibration procedure, thus, must be used. Besides the risk of poorly-calibrated domains, the high resolution also requires much higher computational time with no gain in skill, provided that the predictors considered are relevant at a synoptic scale. Although ERA5 should be the dataset of choice, its use at a lower resolution to predict daily precipitation should provide an equivalent performance.
+However, ERA5 high spatial resolution (0.25\degree) turned out to be a trap for simple calibration techniques. The domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local solutions. An enhanced calibration procedure, thus, must be used. Besides the risk of poorly-calibrated domains, the high resolution also requires much higher computational time with no gain in skill, provided that the predictors considered are relevant at a synoptic scale. Although ERA5 should be the dataset of choice, its use at a lower resolution to predict daily precipitation should provide equivalent performance.
 
 
 % Please include a maximum of seven keywords
